--- a/happyanniversary/language/en/email/happy_anniversary.txt
+++ b/happyanniversary/language/en/email/happy_anniversary.txt
@@ -1,8 +1,12 @@
 Subject: Happy Membership Anniversary
 
-Hello, {USERNAME}
+Happy Anniversary, {USERNAME}
 
+On this day {YEARS} years ago, you found {SITENAME} on the Internet and love begins here. It is the time to celebrate the joys of today, the memories of yesterday, and the hopes of tomorrow. Thanks for being part of our online community.
+
+Visit {SITENAME} now, let we can say we love you so much:
 {U_BOARD}
-{YEARS}
+
+Always beside us, Sweet Love :)
 
 {EMAIL_SIG}
